--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
     "mongoose": "^8.8.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.11.3",
     "nodemon": "^3.1.7"
   }
